--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMOpxc3FDzaxXi7wQlrjp26",
+      "authorship_tag": "ABX9TyNjVGn5Svu1wlbw9F5ra/If",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,29 +203,21 @@
         "\n",
         "The flow of information goes like this:\n",
         "\n",
-        "* Both data points (x0 and x1) go through distinct affine transformations to\n",
-        "generate the corresponding \"values\" (v0 and v1) and \"keys\" (k0 and k1), which\n",
-        "we’ll be calling projections.\n",
+        "* Both data points (x0 and x1) go through distinct affine transformations to generate the corresponding \"values\" (v0 and v1) and \"keys\" (k0 and k1), which we’ll be calling projections.\n",
         "\n",
-        "* Both data points also go through another affine transformation to generate\n",
-        "the corresponding \"queries\" (q0 and q1).\n",
+        "* Both data points also go through another affine transformation to generate the corresponding \"queries\" (q0 and q1).\n",
         "\n",
         "* Each projection has the same number of dimensions as the inputs (four).\n",
         "\n",
-        "* Instead of simply using the projections, as former attention heads did, this\n",
-        "attention head uses only a chunk of the projections to compute the context\n",
-        "vector.\n",
+        "* Instead of simply using the projections, as former attention heads did, this attention head uses only a chunk of the projections to compute the context vector.\n",
         "\n",
         "* Since projections have four dimensions, let’s split them into two chunks—blue (left) and green (right)—of two dimensions each.\n",
         "\n",
         "* The first attention head uses only blue chunks to compute its context vector, which, like the projections, has only two dimensions.\n",
         "\n",
-        "* The second attention head (not depicted in the figure above) uses the green chunks to compute the other half of the context vector, which, in the end, has\n",
-        "the desired dimension.\n",
+        "* The second attention head (not depicted in the figure above) uses the green chunks to compute the other half of the context vector, which, in the end, has the desired dimension.\n",
         "\n",
-        "* Like the former multi-headed attention mechanism, the context vector goes\n",
-        "through a feed-forward network to generate the \"hidden states\" (only the first\n",
-        "one is depicted in the figure above).\n",
+        "* Like the former multi-headed attention mechanism, the context vector goes through a feed-forward network to generate the \"hidden states\" (only the first one is depicted in the figure above).\n",
         "\n"
       ],
       "metadata": {
