--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNjVGn5Svu1wlbw9F5ra/If",
+      "authorship_tag": "ABX9TyMkYpiKhf32uDvVDvLUQ4Si",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,10 +83,23 @@
         "from plots.chapter10 import *"
       ],
       "metadata": {
-        "id": "4KaJRDNLmTq_"
+        "id": "4KaJRDNLmTq_",
+        "outputId": "3876bebf-1810-464e-dba1-76a6f39c41a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading files from GitHub repo to Colab...\n",
+            "Finished!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -111,7 +124,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -122,7 +135,7 @@
       "metadata": {
         "id": "tWAO0Hb3mjb-"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -197,9 +210,9 @@
         "First, it is a simpler model (the wrong approach has only eight weights while the correct one has sixteen), so its learning capacity is limited. Second, since each head can only look at a subset of the features, they simply cannot learn about longrange dependencies in the inputs.\n",
         "\n",
         "Now, let’s use a source sequence of length two as input, with each data point\n",
-        "having four features like the chunking example above, to illustrate our new selfattention mechanism.\n",
+        "having four features like the chunking example above, to illustrate our new self-attention mechanism.\n",
         "\n",
-        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/attn_narrow_first_head.png?raw=1)\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/narrow-attention1.png?raw=1)\n",
         "\n",
         "The flow of information goes like this:\n",
         "\n",
@@ -235,9 +248,172 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The new multi-headed attention class is more than a combination of both the\n",
+        "Attention and MultiHeadedAttention classes: It implements the chunking of the projections and introduces dropout for attention scores."
+      ],
       "metadata": {
         "id": "QV5-eLRZ9hto"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MultiHeadAttention(nn.Module):\n",
+        "\n",
+        "  def __init__(self, n_heads, d_model, dropout=0.1):\n",
+        "    super(MultiHeadAttention, self).__init__()\n",
+        "\n",
+        "    self.n_heads = n_heads\n",
+        "    self.d_model = d_model\n",
+        "    self.d_k = int(d_model / n_heads)\n",
+        "\n",
+        "    # Affine transformations for Q, K, and V\n",
+        "    self.QUERY = nn.Linear(d_model, d_model)\n",
+        "    self.KEY = nn.Linear(d_model, d_model)\n",
+        "    self.VALUE = nn.Linear(d_model, d_model)\n",
+        "\n",
+        "    self.linear_layer = nn.Linear(d_model, d_model)\n",
+        "    self.dropout = nn.Dropout(p=dropout)\n",
+        "    self.alphas = None\n",
+        "\n",
+        "  def make_chunks(self, x):\n",
+        "    batch_size, seq_len = x.size(0), x.size(1)\n",
+        "    # N, L, D -> N, L, n_heads * d_k\n",
+        "    x = x.view(batch_size, seq_len, self.n_heads, self.d_k) # splits its last dimension in two\n",
+        "    # N, n_heads, L, d_k\n",
+        "    x = x.transpose(1, 2)\n",
+        "    return x\n",
+        "\n",
+        "  def init_keys(self, key):\n",
+        "    # N, n_heads, L, d_k\n",
+        "    # Chunking the key, and value projections\n",
+        "    self.projection_key = self.make_chunks(self.KEY(key))\n",
+        "    self.projection_value = self.make_chunks(self.VALUE(key))\n",
+        "\n",
+        "  def score_function(self, query):\n",
+        "    # scaled dot product\n",
+        "    # N, n_heads, L, d_k x # N, n_heads, d_k, L -> N, n_heads, L, L\n",
+        "    # Chunking the query projections\n",
+        "    projection_query = self.make_chunks(self.QUERY(query))\n",
+        "    dot_products = torch.matmul(projection_query, self.projection_key.transpose(-2, -1))\n",
+        "    scores = dot_products / np.sqrt(self.d_k)\n",
+        "    return scores\n",
+        "\n",
+        "  def attention(self, query, mask=None):\n",
+        "    # Query is batch-first: N, L, D\n",
+        "    # Score function will generate scores for each head\n",
+        "    scores = self.score_function(query)  # N, n_heads, L, L\n",
+        "    if mask is not None:\n",
+        "      scores = scores.masked_fill(mask==0, -1e9)\n",
+        "    alphas = F.softmax(scores, dim=-1)  # N, n_heads, L, L\n",
+        "    alphas = self.dropout(alphas)\n",
+        "    self.alphas = alphas.detach()\n",
+        "\n",
+        "    # N, n_heads, L, L x N, n_heads, L, d_k -> N, n_heads, L, d_k\n",
+        "    context = torch.matmul(alphas, self.projection_value)\n",
+        "    return context\n",
+        "\n",
+        "  def output_function(self, contexts):\n",
+        "    # N, L, D\n",
+        "    output = self.linear_layer(contexts)  # N, L, D\n",
+        "    return output\n",
+        "\n",
+        "  def forward(self, query, mask=None):\n",
+        "    if mask is not None:\n",
+        "      # N, 1, L, L - every head uses the same mask\n",
+        "      mask = mask.unsqueeze(1)\n",
+        "\n",
+        "    # N, n_heads, L, d_k\n",
+        "    contexts = self.attention(query, mask=mask)\n",
+        "    # Concatenating the context vectors\n",
+        "    # N, L, n_heads, d_k\n",
+        "    contexts = contexts.transpose(1, 2).contiguous()\n",
+        "    # N, L, n_heads * d_k = N, L, d_model\n",
+        "    contexts = contexts.view(query.size(0), -1, self.d_model)\n",
+        "    # N, L, d_model\n",
+        "    output = self.output_function(contexts)\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "cDf9HTfwCO31"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can generate some dummy points corresponding to a mini-batch of 16\n",
+        "sequences (N), each sequence having two data points (L), each data point having\n",
+        "four features (F):"
+      ],
+      "metadata": {
+        "id": "7UP_3J_sTdHe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dummy_points = torch.randn(16, 2, 4) # N, L, F\n",
+        "multi_head_attention = MultiHeadAttention(n_heads=2, d_model=4, dropout=0.0)\n",
+        "multi_head_attention.init_keys(dummy_points)\n",
+        "output = multi_head_attention(dummy_points) # N, L, D\n",
+        "output.shape"
+      ],
+      "metadata": {
+        "id": "FoNt8RdgTdrK",
+        "outputId": "45fb71a6-09d1-4e4e-8b61-e19f2339a85c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([16, 2, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since we’re using the data points as \"keys,\" \"values,\" and \"queries,\" this is a selfattention mechanism.\n",
+        "\n",
+        "The figure below depicts a multi-headed attention mechanism with its two heads,\n",
+        "blue (left) and green (right), and the first data point being used as a \"query\" to\n",
+        "generate the first \"hidden state\" ($h_0$).\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/narrow-attention2.png?raw=1)\n",
+        "\n",
+        "\n",
+        "The important thing to remember here is: \"**Multi-headed attention chunks the projections, not the inputs.**\""
+      ],
+      "metadata": {
+        "id": "ANPx_oybUjZl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Stacking Encoders and Decoders"
+      ],
+      "metadata": {
+        "id": "bOL56HO-Vd93"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Bd-otWCtVe8v"
       }
     }
   ]
