--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMkYpiKhf32uDvVDvLUQ4Si",
+      "authorship_tag": "ABX9TyPni3uUsoNjlv9a4KxMx9wR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "tWAO0Hb3mjb-"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "cDf9HTfwCO31"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -368,7 +368,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,9 +411,44 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Let’s make our encoder-decoder architecture deeper by stacking two encoders on\n",
+        "top of one another, and then do the same with two decoders.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/stacking-encoders-decoders1.png?raw=1)\n",
+        "\n",
+        "The output of one encoder feeds the cross-attention mechanism of all stacked\n",
+        "decoders. The output of one decoder feeds the next, and the last decoder outputs predictions as usual.\n",
+        "\n",
+        "The figure above represents an encoder-decoder architecture with two \"layers\"\n",
+        "each. But we’re not stopping there: We’re stacking six \"layers\"!\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/stacking-encoders-decoders2.png?raw=1)\n",
+        "\n",
+        "By the way, that’s exactly how a Transformer is built!\n",
+        "\n",
+        "Cool! Is this a Transformer already then?\n",
+        "\n",
+        "Not yet, no. We need to work further on the \"sub-layers\" to transform the architecture above into a real Transformer."
+      ],
       "metadata": {
         "id": "Bd-otWCtVe8v"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Wrapping \"Sub-Layers\""
+      ],
+      "metadata": {
+        "id": "h8SJKxGds_G5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "YdgnQaE8tDH5"
       }
     }
   ]
