--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPni3uUsoNjlv9a4KxMx9wR",
+      "authorship_tag": "ABX9TyN/rGfWfqgK4G6Fn6cFBJVG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -446,9 +446,68 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "As our model grows deeper, with many stacked \"layers,\" we’re going to run into\n",
+        "familiar issues, like the vanishing gradients problem. In computer vision models, this issue was successfully addressed by the addition of other components, like batch normalization and residual connections.\n",
+        "\n",
+        "But we also know that dropout works pretty well as a regularizer, so we can throw\n",
+        "that in the mix as well.\n",
+        "\n",
+        "We’ll wrap each and every \"sub-layer\" with them! Cool, right? But that brings up another question: How to wrap them?\n",
+        "\n",
+        "It turns out, we can wrap a \"sub-layer\" in one of two ways: norm-last or norm-first.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/stacking-encoders-decoders3.png?raw=1)\n",
+        "\n",
+        "Let’s turn the diagrams above into equations:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\begin{aligned}\n",
+        "&\\text{outputs}_{\\text{norm-last}}=&\\text{norm(inputs + dropout(sublayer(inputs))}\n",
+        "\\\\\n",
+        "&\\text{outputs}_{\\text{norm-first}}=&\\text{inputs + dropout(sublayer(norm(inputs)))}\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "\n",
+        "The equations are almost the same, except for the fact that the norm-last wrapper normalizes the outputs and the norm-first wrapper normalizes the inputs. That’s a small, yet important, difference.\n",
+        "\n",
+        "Why?\n",
+        "\n",
+        "If you’re using positional encoding, you want to normalize your inputs, so norm-first is more convenient.\n",
+        "\n",
+        "We’ll normalize the final outputs; that is, the output of the last \"layer\".\n",
+        "\n",
+        "From now on, we’re sticking with norm-first, thus normalizing the inputs:\n",
+        "\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\begin{aligned}\n",
+        "&\\text{outputs}_{\\text{norm-first}}=&\\text{inputs + dropout(sublayer(norm(inputs)))}\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "\n",
+        "By wrapping each and every \"sub-layer\" inside both encoder \"layers\" and decoder \"layers,\" we’ll arrive at the desired Transformer architecture.\n"
+      ],
       "metadata": {
         "id": "YdgnQaE8tDH5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Transformer Encoder"
+      ],
+      "metadata": {
+        "id": "eQNpkkRK2iy6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "2GnLoFGS2jvC"
       }
     }
   ]
