--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN/rGfWfqgK4G6Fn6cFBJVG",
+      "authorship_tag": "ABX9TyMYYyeZsn4XilO1BkMYon4N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -505,10 +505,50 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/stacking-encoders-decoders4.png?raw=1)\n",
+        "\n",
+        "On the left, the encoder uses a norm-last wrapper, and its output (the encoder’s states) is given by:\n",
+        "\n",
+        "$$\n",
+        "\\large\n",
+        "\\begin{aligned}\n",
+        "&\\text{outputs}_{\\text{norm-last}}=&\\text{norm}(\\underbrace{\\text{norm(inputs + att(inputs))}}_{\\text{Output of SubLayer}_0} + \\text{ffn}(\\underbrace{\\text{norm(inputs + att(inputs))}}_{\\text{Output of SubLayer}_0}))\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "\n",
+        "On the right, the encoder uses a norm-first wrapper, and its output (the encoder’s states) is given by:\n",
+        "\n",
+        "$$\n",
+        "\\large\n",
+        "\\begin{aligned}\n",
+        "&\\text{outputs}_{\\text{norm-first}}=&\\underbrace{\\text{inputs + att(norm(inputs))}}_{\\text{Output of SubLayer}_0}+\\text{ffn(norm(}\\underbrace{\\text{inputs + att(norm(inputs))}}_{\\text{Output of SubLayer}_0}))\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "\n",
+        "The norm-first wrapper allows the inputs to flow unimpeded (the inputs aren’t\n",
+        "normalized) all the way to the top while adding the results of each \"sub-layer\" along\n",
+        "the way.\n",
+        "\n",
+        "Which one is best?\n",
+        "\n",
+        "There is no straight answer to this question. It actually  placing the batch normalization layer before or after the\n",
+        "activation function.\n",
+        "\n",
+        "Let’s see it in code, starting with the \"layer,\" and all its wrapped \"sub-layers\":"
+      ],
       "metadata": {
         "id": "2GnLoFGS2jvC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Nh9IK0mk31zG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
