--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMYYyeZsn4XilO1BkMYon4N",
+      "authorship_tag": "ABX9TyNGiDl5hRKpFk8WbroTjyUr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -543,12 +543,113 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class EncoderLayer(nn.Module):\n",
+        "\n",
+        "  def __init__(self, n_heads, d_model, ff_units, dropout=0.1):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.n_heads = n_heads\n",
+        "    self.d_model = d_model\n",
+        "    self.ff_units = ff_units\n",
+        "    self.dropout = dropout\n",
+        "\n",
+        "    self.self_attention_heads = MultiHeadAttention(n_heads, d_model, dropout)\n",
+        "    self.feed_forward_network = nn.Sequential(\n",
+        "        nn.Linear(d_model, ff_units),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Dropout(dropout),\n",
+        "        nn.Linear(ff_units, d_model)\n",
+        "    )\n",
+        "\n",
+        "    # define layer normalization\n",
+        "    self.norm1 = nn.LayerNorm(d_model)\n",
+        "    self.norm2 = nn.LayerNorm(d_model)\n",
+        "    self.dropout1 = nn.Dropout(dropout)\n",
+        "    self.dropout2 = nn.Dropout(dropout)\n",
+        "\n",
+        "  def forward(self, query, mask=None):\n",
+        "    # Sublayer #0\n",
+        "    # Norm\n",
+        "    norm_query = self.norm1(query)\n",
+        "    # Multi-headed Attention\n",
+        "    self.self_attention_heads.init_keys(norm_query)\n",
+        "    states = self.self_attention_heads(norm_query, mask)\n",
+        "    # Add\n",
+        "    attention = query + self.dropout1(states)\n",
+        "\n",
+        "    # Sublayer #1\n",
+        "    # Norm\n",
+        "    norm_attention = self.norm2(attention)\n",
+        "    # Feed Forward\n",
+        "    output = self.feed_forward_network(norm_attention)\n",
+        "    # Add\n",
+        "    output = attention + self.dropout2(output)\n",
+        "    return output"
+      ],
       "metadata": {
         "id": "Nh9IK0mk31zG"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we can stack a bunch of \"layers\" like that to build an actual encoder.Its constructor takes an instance of an EncoderLayer, the number\n",
+        "of \"layers\" we’d like to stack on top of one another, and a max length of the source\n",
+        "sequence that’s going to be used for the positional encoding.\n",
+        "\n",
+        "The final outputs are, as usual, the states of the\n",
+        "encoder that will feed the cross-attention mechanism of every \"layer\" of the\n",
+        "decoder."
+      ],
+      "metadata": {
+        "id": "QG_ZmLiDwQWb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TransformerEncoder(nn.Module):\n",
+        "\n",
+        "  def __init__(self, encoder_layer, n_layers=1, max_len=100):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.d_model = encoder_layer.d_model\n",
+        "    self.positional_encoding = PositionalEncoding(max_len, self.d_model)\n",
+        "    self.norm_layer = nn.LayerNorm(self.d_model)\n",
+        "    self.layers = nn.ModuleList([copy.deepcopy(encoder_layer) for _ in range(n_layers)])\n",
+        "\n",
+        "  def forward(self, query, mask=None):\n",
+        "    # Positional Encoding\n",
+        "    x = self.positional_encoding(query)\n",
+        "    for layer in self.layers:\n",
+        "      x = layer(x, mask)\n",
+        "    # Norm\n",
+        "    return self.norm_layer(x)"
+      ],
+      "metadata": {
+        "id": "BoyHSBzVwts9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Transformer Decoder"
+      ],
+      "metadata": {
+        "id": "Hcd3ptphydX8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "CKf_i7WRyfCn"
+      }
     }
   ]
 }
